Add teams note on the editor ui
