# editor/server/routes.js
@@ -4,7 +4,8 @@ const Controllers = require('./controllers')
 
 module.exports = express.Router()
   .get('/version', Controllers.version)
-  .get('/api/steps', Controllers.steps)
-  .post('/api/generate', Controllers.generate)
-  .post('/api/install', Controllers.install)
-  .post('/api/run', Controllers.run)
+  .get('/api/restqa/steps', Controllers.steps)
+  .post('/api/restqa/generate', Controllers.generate)
+  .post('/api/restqa/install', Controllers.install)
+  .post('/api/restqa/run', Controllers.run)
+  .get('/api/info', Controllers.info)
